--- a/src/components_styles/MultiClassPredictions.module.scss
+++ b/src/components_styles/MultiClassPredictions.module.scss
@@ -1,6 +1,6 @@
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
+    max-width: 800px;
+    margin: 0rem;
     padding: 2rem;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -10,7 +10,7 @@
 }
 
 .title {
-    font-size: 1.75rem;
+    font-size: 1rem;
     color: #333;
     margin-bottom: 1rem;
     font-weight: 600;
@@ -32,7 +32,7 @@
 .accuracyValue {
     font-weight: 700;
     color: #2563eb;
-    font-size: 1.125rem;
+    font-size: 0.75rem;
 }
 
 .progressBarContainer {
@@ -60,12 +60,18 @@
 .table {
     width: 100%;
     border-collapse: collapse;
-    text-align: left;
-    font-size: 0.875rem;
+    font-size: 0.75rem;
+
+    th,
+    td {
+        padding-left: 0.25rem;
+        padding-right: 0.25rem;
+        padding-top: 0.6rem;
+        padding-bottom: 0.6rem;
+    }
 
     th {
         background-color: #f8fafc;
-        padding: 0.75rem 1rem;
         font-weight: 600;
         color: #4b5563;
         border-bottom: 1px solid #e5e7eb;
@@ -73,7 +79,6 @@
     }
 
     td {
-        padding: 0.75rem 1rem;
         border-bottom: 1px solid #e5e7eb;
         vertical-align: middle;
     }
@@ -83,7 +88,7 @@
     transition: background-color 0.2s ease;
 
     &:hover {
-        background-color: #f9fafb;
+        background-color: rgb(9, 100, 100);
     }
 
     &:last-child td {
