--- a/src/components_styles/MultiClassPredictions.module.scss
+++ b/src/components_styles/MultiClassPredictions.module.scss
@@ -64,8 +64,8 @@
 
     th,
     td {
-        padding-left: 0.25rem;
-        padding-right: 0.25rem;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
         padding-top: 0.6rem;
         padding-bottom: 0.6rem;
     }
@@ -88,7 +88,7 @@
     transition: background-color 0.2s ease;
 
     &:hover {
-        background-color: rgb(9, 100, 100);
+        background-color: var(--accent1);
     }
 
     &:last-child td {
