--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,41 @@
 :root {
+
+    --background-color: rgb(33, 33, 33);
+    --accent1: rgb(0, 177, 156);
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     color-scheme: light dark;
     /* color: rgba(255, 255, 255, 0.87); */
-    background-color: #242424;
+    background-color: var(--background-color);
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
+
+
+
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+html {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 body {
     margin: 0;
+    padding: 0;
     min-width: 100vw;
     min-height: 100vh;
+    overflow-x: hidden;
 }
 
 
