--- a/src/components_styles/MultiClassPredictions.module.scss
+++ b/src/components_styles/MultiClassPredictions.module.scss
@@ -1,7 +1,7 @@
 .container {
     max-width: 800px;
     margin: 0rem;
-    padding: 2rem;
+    padding: 1rem;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -57,6 +57,10 @@
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
+.wider {
+    // margin: 3rem;
+}
+
 .table {
     width: 100%;
     border-collapse: collapse;
@@ -69,6 +73,7 @@
         padding-top: 0.6rem;
         padding-bottom: 0.6rem;
     }
+
 
     th {
         background-color: #f8fafc;
@@ -99,6 +104,9 @@
 .label {
     display: inline-block;
     padding: 0.25rem 0.5rem;
+    margin-left: 0.5rem;
+    //TODO add a label class to all labels, put the margin on the label class
+    margin-right: 0.5rem;
     background-color: #f3f4f6;
     border-radius: 4px;
     font-weight: 500;
@@ -120,7 +128,7 @@
     background-color: #d1fae5;
     border-radius: 4px;
     font-weight: 500;
-    color: #065f46;
+    color: var(--correctEmojiGreen);
 }
 
 .incorrectLabel {
@@ -129,7 +137,7 @@
     background-color: #fee2e2;
     border-radius: 4px;
     font-weight: 500;
-    color: #b91c1c;
+    color: var(--wrongEmojiRed);
 }
 
 .resultIcon {
@@ -137,13 +145,4 @@
     align-items: center;
     justify-content: center;
     font-size: 1.25rem;
-    font-weight: bold;
-
-    &:global(.correct) {
-        color: #10b981;
-    }
-
-    &:global(.incorrect) {
-        color: #ef4444;
-    }
 }
