--- a/src/App.scss
+++ b/src/App.scss
@@ -21,31 +21,64 @@
     flex-direction: column;
     position: relative;
     margin: 2.5rem;
-}
 
 
-.ControlContainer {
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    min-width: 20rem;
-    max-width: 40%;
-    height: 2.5rem;
-    /* margin-top: 1rem; */
-    margin-bottom: 1rem;
+    .TopControlContainer {
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        min-width: 20rem;
+        max-width: 100%;
+        height: 2.5rem;
+        margin: 1rem;
 
-    .startButton {
-        text-align: center;
-        min-width: 9rem;
+        .playReplayContainer {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+
+            &>* {
+                margin: 0.5rem;
+            }
+        }
+
+        .startButton {
+            padding: 0.6em 1.2em;
+            font-size: 1em;
+            font-weight: 500;
+            display: flex;
+            flex-direction: row;
+            place-items: center;
+            place-content: center;
+            min-width: 9rem;
+            background-color: var(--chatgpt_gray);
+            // margin: 1rem;
+        }
+
+        .loadingButton {
+            background-color: var(--gray_st) !important;
+
+        }
+    }
+
+
+    .VisualizationContainer {
+        position: relative;
+        overflow-x: hidden;
+        display: flex;
+        flex-direction: row;
+        margin: 1rem;
+
+        .leftColumn {
+            &>* {
+                margin-bottom: 1rem;
+            }
+        }
     }
 }
 
-.VisualizationContainer {
-    position: relative;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: row;
-}
 
 .predictionsContainer {
     margin-left: 2.5rem;
