--- a/src/components_styles/MultiClassPredictions.module.scss
+++ b/src/components_styles/MultiClassPredictions.module.scss
@@ -1,17 +1,16 @@
 .container {
     max-width: 800px;
-    margin: 0rem;
-    padding: 1rem;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 1rem;
 }
 
 .header {
+    margin-top: 2rem;
     margin-bottom: 2rem;
 }
 
 .title {
     font-size: 1rem;
-    color: #333;
+    color: white;
     margin-bottom: 1rem;
     font-weight: 600;
 }
@@ -31,7 +30,7 @@
 
 .accuracyValue {
     font-weight: 700;
-    color: #2563eb;
+    color: var(--light_blue);
     font-size: 0.75rem;
 }
 
@@ -46,7 +45,7 @@
 
 .progressBar {
     height: 100%;
-    background-color: #2563eb;
+    background-color: var(--light_blue);
     border-radius: 9999px;
     transition: width 0.5s ease;
 }
@@ -93,7 +92,8 @@
     transition: background-color 0.2s ease;
 
     &:hover {
-        background-color: var(--accent1);
+        // TODO make this color be green if the thing is correct and red if it's wrong
+        background-color: var(--gray_st);
     }
 
     &:last-child td {
