--- a/src/components_styles/ReplayBar.module.scss
+++ b/src/components_styles/ReplayBar.module.scss
@@ -1,13 +1,22 @@
 .replayBarContainer {
-    margin-left: 1rem;
-    border-radius: 10px;
     position: relative;
     height: 100%;
-    width: 100%;
-    background-color: var(--background-color);
+    width: 300px;
+    background-color: var(--chatgpt_gray);
     border: 1px solid white;
     cursor: pointer;
-    user-select: none;
+    overflow: hidden;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    .replayBarMessage {
+        user-select: none;
+        position: relative;
+        left: -0.1rem;
+    }
 }
 
 .draggableBar {
@@ -16,8 +25,19 @@
     height: 100%;
     background-color: #d82a2a;
     cursor: grab;
+    user-select: none;
+    transition: opacity 0.1s ease-in-out;
+    // margin-left: 0.1rem;
+    // margin-right: 0.1rem;
+
 }
 
-.training {
-    background-color: gray;
+.draggableBarDuringTraining {
+    transition: left 0.2s ease-out, opacity 0.15s ease-in-out 0.2s;
+    opacity: 0;
+
+}
+
+.duringTraining {
+    // background-color: var(--gray_st);
 }
