--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,27 @@
 :root {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-    --background-color: rgb(33, 33, 33);
-    --accent1: rgb(0, 177, 156);
+    /* define the global color variables  */
+    --chatgpt_gray: rgb(33, 33, 33);
+    --red070: rgba(255, 0, 0, 0.7);
+    --blue070: rgba(0, 0, 255, 0.7);
+    --light_blue: rgb(70, 70, 255);
+    --gray_st: rgb(94, 94, 94);
+    --purple_accent: rgb(151, 0, 165);
     --wrongEmojiRed: rgb(249, 47, 96);
     --correctEmojiGreen: rgb(0, 119, 60);
+
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     color-scheme: light dark;
     /* color: rgba(255, 255, 255, 0.87); */
-    background-color: var(--background-color);
+    background-color: var(--chatgpt_gray);
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overflow-x: hidden;
-
-
-
 }
 
 *,
@@ -40,13 +44,8 @@ body {
     overflow-x: hidden;
 }
 
-
 button {
-    border-radius: 8px;
     border: 1px solid white;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
     font-family: inherit;
     background-color: #1a1a1a;
     cursor: pointer;
@@ -54,7 +53,7 @@ button {
 }
 
 button:hover {
-    border-color: #646cff;
+    border-color: var(--light_blue);
 }
 
 button:focus,
