final commit to v1, deploying now

--- a/src/components_styles/ReplayBar.module.scss
+++ b/src/components_styles/ReplayBar.module.scss
@@ -26,6 +26,11 @@
         font-style: italic;
         font-size: 1rem;
     }
+    .epochShowerP {
+        position: absolute;
+        right: 0.5rem;
+        opacity: 1 !important;
+    }
 
     &:hover {
         p {
